<resources>
    <string name="app_name">OSMmaps</string>
    <string name="operation_base">operation_base</string>
    <string name="arcgis_map">ArcGIS MAP</string>
    <string name="arcgis_scene">ArcGIS Scene</string>
    <string name="osm">Open Street Map</string>
    <string name="google_map">Google Map</string>
    <string name="bing_maps">Bing Map</string>
    <string name="here_map">Here Map</string>
    <string name="Leaflet_maps">Leaflet Map</string>
    <string name="tomtom_map">TomTom Map</string>
    <string name="location_permission_denied">Permission denied</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Find an address</string>
    <string name="nothing_found">Nothing found for</string>
    <string name="pour_ajouter_">Pour ajouter une point, clicker sur un emplacement dans la carte et remplir la formulaire</string>
    <string name="pick_place">pick_place</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="none">None</string>
    <string name="ajouter">ajouter</string>
    <string name="type_de_point">Type de point : </string>
    <string name="nom_de_point">Nom de point</string>
    <string name="anchored">Anchored</string>
    <string name="centered">Centered</string>
    <string name="clear">Clear</string>
    <string name="mappolyline">MapPolyline</string>
    <string name="mappolygon">MapPolygon</string>
    <string name="mapcircle">MapCircle</string>
    <string name="add_route">Add Route</string>
    <string name="add_waypoints">Add Waypoints</string>
    <string name="clear_map">Clear Map</string>
    <string name="geocoding">Geocoding</string>
    <string name="search">Search</string>
    <string name="add_by_search">Add by search</string>
    <string name="clear_all">Clear all</string>
    <string name="add_on_tap">Add on tap</string>
    <string name="pois">POIs</string>
    <string name="globe">Globe</string>
    <string name="mercator">Mercator</string>
    <string name="map_projection">Map projection</string>
    <string name="custom">Custom</string>
    <string name="tile_layer">Tile layer</string>
    <string name="demo">Demo</string>

    <string-array name="map_styles">
        <item>Symbolic Light</item>
        <item>Symbolic Dark</item>
        <item>Symbolic Low Contrast</item>
        <item>Photorealistic (no markup)</item>
        <item>Photorealistic</item>
        <item>High Contrast Light</item>
        <item>High Contrast Dark</item>
        <item>Custom</item>
    </string-array>
</resources>
