<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".HereActivity">
    <com.here.sdk.mapviewlite.MapViewLite
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.here.sdk.mapviewlite.MapViewLite>

    <HorizontalScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anchored"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="anchoredMapMarkersButtonClicked" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/centered"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="centeredMapMarkersButtonClicked" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="clearMapButtonClicked" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mappolyline"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="onMapPolylineButtonClicked" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mappolygon"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="onMapPolygonButtonClicked" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mapcircle"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="onMapCircleButtonClicked" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/add_route"
                android:onClick="addRouteButtonClicked" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/add_waypoints"
                android:onClick="addWaypointsButtonClicked" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/clear_map"
                android:onClick="clearMapButtonClicked_" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/search"
                android:onClick="searchExampleButtonClicked" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/geocoding"
                android:onClick="geocodeAnAddressButtonClicked" />
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>