<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/normale"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:text="@string/normal"
        android:layout_margin="10dp"
        android:textColor="@color/design_default_color_primary"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/hybrid"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:text="@string/hybrid"
        android:layout_margin="10dp"
        android:textColor="@color/design_default_color_primary"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/satellite"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:text="@string/satellite"
        android:textColor="@color/design_default_color_primary"
        android:layout_margin="10dp"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/terrain"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:text="@string/terrain"
        android:textColor="@color/design_default_color_primary"
        android:layout_margin="10dp"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/nonee"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:textColor="@color/design_default_color_primary"
        android:text="@string/none"
        android:layout_margin="10dp"
        android:textSize="24sp"/>

</LinearLayout>