<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/arcgis_map"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            android:text="@string/arcgis_map"
            android:background="@color/arcgis_map"
            android:layout_margin="80dp"/>
        <Button
            android:id="@+id/arcgis_scene"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/arcgis_scene"
            android:textColor="@color/white"
            android:background="@color/arcgis_scene"
            android:layout_margin="80dp"/>
        <Button
            android:id="@+id/osm"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/arcgis_map"
            android:text="@string/osm"
            android:textColor="@color/white"
            android:background="@color/osm"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"/>
        <Button
            android:id="@+id/google_map"
            android:layout_width="100dp"
            android:textColor="@color/white"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/arcgis_scene"
            android:text="@string/google_map"
            android:background="@color/google_map"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/bing_maps"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/osm"
            android:text="@string/bing_maps"
            android:textColor="@color/white"
            android:background="@color/bing_maps"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"/>
        <Button
            android:id="@+id/here_map"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/osm"
            android:text="@string/here_map"
            android:textColor="@color/white"
            android:background="@color/here_map"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/Leaflet_maps"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bing_maps"
            android:text="@string/Leaflet_maps"
            android:background="@color/Leaflet_maps"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"/>
        <Button
            android:id="@+id/tomtom_map"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bing_maps"
            android:text="@string/tomtom_map"
            android:background="@color/tomtom_map"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>