<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_de_point"
            android:textSize="24sp"/>
        <Spinner
            android:id="@+id/type_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_de_point"
            android:textSize="24sp"/>
        <EditText
            android:id="@+id/text_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:textSize="24sp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/cancel"
        android:text="@string/ajouter"
        android:textSize="24sp"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:textColor="@color/cardview_light_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>